--- a/view.html
+++ b/view.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Star Wars - Express</title>
+  <title>Sushi Burger</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -11,6 +11,7 @@
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -18,76 +19,64 @@
 
   <div class="container">
     <div class="jumbotron">
-      <h1>Star Wars Express</h1>
-      <h3>The greatest resource in the galaxy for Star Wars statistics!</h3>
+      <h1>Sushi Burger</h1>
+      <h3>Sushi Burger for Your Health</h3>
       <hr>
-      <a href="/add"><button class="btn btn-danger btn-lg"><span class="fa fa-plus"></span> Add New
-          Character</button></a>
-      <a href="/api/characters"><button class="btn btn-danger btn-lg"><span
-            class="fa fa-eye"></span> All Characters</button></a>
+      <a href="/add"><button class="btn btn-info btn-lg"><span class="fa fa-eye"></span> View Tables</button></a>
+      <a href="/api/characters"><button class="btn btn-primary btn-lg"><span
+            class="fa fa-plus"></span> Make Reservation</button></a>
     </div>
     <div class="row">
-
-      <div class="col-12">
-
-        <div class="card mb-4">
-          <div class="card-header">
-            <h3><strong>Character Search</strong></h3>
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-md-4">
+            <!-- <img src="Images/table-topdown-1.jpg" alt="table" class="table"> -->
+            <p class="res-detail">
+              <span style="font-size: 24px">Bob(4)</span> <br>
+              <span>8011234567</span> <br>
+              <span>bob@bob.com</span> <br>
+              <span>1234567</span>
+            </p>
           </div>
-          <div class="card-body">
-            <input type="text" id="character-search" class="form-control">
-            <br>
-            <div class="text-right">
-              <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span
-                  class="fa fa-search"></span> Search
-                Your Feelings. You know it is true.</button>
-
-            </div>
+          <div class="col-md-4">
+            <p class="res-detail">
+              <span style="font-size: 24px">Bob(4)</span> <br>
+              <span>8011234567</span> <br>
+              <span>bob@bob.com</span> <br>
+              <span>1234567</span>
+            </p>
+          </div>
+          <div class="col-md-4">
+            <p class="res-detail">
+              <span style="font-size: 24px">Bob(4)</span> <br>
+              <span>8011234567</span> <br>
+              <span>bob@bob.com</span> <br>
+              <span>1234567</span>
+            </p>
           </div>
         </div>
-
-        <div class="card">
-          <div class="card-header">
-            <h3><strong>Character Statistics</strong></h3>
+      </div>
+      <div class="col-md-8" style="margin-left: auto; margin-right: auto; float: none;">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="res-detail">
+              <span style="font-size: 24px">Bob(4)</span> <br>
+              <span>8011234567</span> <br>
+              <span>bob@bob.com</span> <br>
+              <span>1234567</span>
+            </p>
           </div>
-          <div class="card-body">
-            <h2 id="name">Yoda</h2>
-            <div id="stats">
-              <h3><strong>Role:</strong> <span id="role">Jedi Master</span></h3>
-              <h3><strong>Age:</strong> <span id="age">900</span></h3>
-              <h3><strong>Force Points:</strong> <span id="force-points">2000</span></h3>
-            </div>
+          <div class="col-md-6">
+            <p class="res-detail">
+              <span style="font-size: 24px">Bob(4)</span> <br>
+              <span>8011234567</span> <br>
+              <span>bob@bob.com</span> <br>
+              <span>1234567</span>
+            </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-  <script type="text/javascript">
-    $("#search-btn").on("click", function() {
-      var searchedCharacter = $("#character-search").val().trim();
-
-      // Using a RegEx Pattern to remove spaces from searchedCharacter
-      // You can read more about RegEx Patterns later https://www.regexbuddy.com/regex.html
-      searchedCharacter = searchedCharacter.replace(/\s+/g, "").toLowerCase();
-
-      $.get("/api/characters/" + searchedCharacter, function(data) {
-        console.log(data);
-        if (data) {
-          $("#stats").show();
-          $("#name").text(data.name);
-          $("#role").text(data.role);
-          $("#age").text(data.age);
-          $("#force-points").text(data.forcePoints);
-        } else {
-          $("#name").text(
-            "The force is not strong with this one. Your character was not found.");
-          $("#stats").hide();
-        }
-      });
-    });
-
-  </script>
 </body>
 
 </html>
