--- a/HTML/home.html
+++ b/HTML/home.html
@@ -11,6 +11,7 @@
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="HTML/style.css">
 
 </head>
 
@@ -21,8 +22,8 @@
       <h1>Sushi Burger</h1>
       <h3>Sushi Burger for Your Health</h3>
       <hr>
-      <a href="/add"><button class="btn btn-info btn-lg"><span class="fa fa-eye"></span> View Tables</button></a>
-      <a href="/api/characters"><button class="btn btn-primary btn-lg"><span
+      <a href="/tables"><button class="btn btn-primary btn-lg"><span class="fa fa-eye"></span> View Tables</button></a>
+      <a href="/reservations"><button class="btn btn-primary btn-lg"><span
             class="fa fa-plus"></span> Make Reservation</button></a>
     </div>
     
