--- a/HTML/view.html
+++ b/HTML/view.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Sushi Burger</title>
+  <title>Sushi Burger Tables</title>
   <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
@@ -11,7 +11,7 @@
     href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="HTML/style.css">
 
 </head>
 
@@ -22,8 +22,8 @@
       <h1>Sushi Burger</h1>
       <h3>Sushi Burger for Your Health</h3>
       <hr>
-      <a href="/add"><button class="btn btn-info btn-lg"><span class="fa fa-eye"></span> View Tables</button></a>
-      <a href="/api/characters"><button class="btn btn-primary btn-lg"><span
+      <a href="/"><button class="btn btn-info btn-lg"><span class="fa fa-home"></span></button></a>
+      <a href="/reservations"><button class="btn btn-primary btn-lg"><span
             class="fa fa-plus"></span> Make Reservation</button></a>
     </div>
     <div class="row">
