--- a/HTML/make.html
+++ b/HTML/make.html
@@ -25,7 +25,32 @@
       <a href="/"><button class="btn btn-info btn-lg"><span class="fa fa-home"></span></button></a>
       <a href="/tables"><button class="btn btn-primary btn-lg"><span class="fa fa-eye"></span> View Tables</button></a>
     </div>
-    
+    <div class="card">
+      <div class="card-header">
+        Table Reservation
+      </div>
+      <div class="car-body">
+        <form role="form">
+          <div class="form-group">
+            <label for="reserve-name">Name</label>
+            <input type="text" class="form-control" id="reserve-name">
+          </div>
+          <div class="form-group">
+            <label for="reserve-phone">Phone Number</label>
+            <input type="text" class="form-control" id="reserve-phone">
+          </div>
+          <div class="form-group">
+            <label for="reserve-email">Email</label>
+            <input type="text" class="form-control" id="reserve-name">
+          </div>
+          <div class="form-group">
+            <label for="reserve-id">Unique ID</label>
+            <input type="text" class="form-control" id="reserve-id">
+          </div>
+          <button type="submit" class="btn btn-primary submit">Submit</button>
+        </form>
+      </div>
+    </div>
 </body>
 
 </html>
